# BUAA_DS_Algo

./: CMakeLists.txt
Eval/: CMakeLists.txt  eval.c  eval.h
Eval/Stack/: CMakeLists.txt  Stack.h
KMP_Search/: CMakeLists.txt  KMP_Search.c  KMP_Search.h
test/Eval/: CMakeLists.txt  EvalInfixToRPN.out  EvalPRNCalc.out  testEvalCalc.c  testEvalInfixToRPN.c  testEvalRPNCalc.c
test/KMP_Search/: CMakeLists.txt  Huge.in  Normal_1.in  Normal_1.out  Normal_2.in  NotFound.in  SingleSubStr_1.in  outputCompare.sh  testKMP.c
